--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^5.1.13",
     "babel-loader": "^5.0.0",
+    "bower-webpack-plugin": "^0.1.8",
     "css-loader": "^0.12.0",
     "file-loader": "^0.8.1",
     "imports-loader": "^0.6.3",
